--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
-		"chalk": "^4.1.2"
+		"chalk": "^4.1.2",
+		"fullcalendar": "^5.11.3"
 	}
 }
